--- a/Sample1/MvcMultiLanguage/Views/Shared/_LogOnPartial.cshtml
+++ b/Sample1/MvcMultiLanguage/Views/Shared/_LogOnPartial.cshtml
@@ -1,7 +1,3 @@
-﻿@if(Request.IsAuthenticated) {
-    <text>Welcome <strong>@User.Identity.Name</strong>!
-    [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
-}
-else {
-    @:[ @Html.ActionLink("Log On", "LogOn", "Account") ]
-}
+﻿@Html.LanguageSelectorLink("en-US", "[English]", "English", null)
+&nbsp;
+@Html.LanguageSelectorLink("pt-BR", "[Português]", "Português", null)
