--- a/Sample1/MvcMultiLanguage/Views/Shared/_Layout.cshtml
+++ b/Sample1/MvcMultiLanguage/Views/Shared/_Layout.cshtml
@@ -11,15 +11,14 @@
     <div class="page">
         <header>
             <div id="title">
-                <h1>My MVC Application</h1>
+                <h1>@Resources.Global.NomeAplicacao</h1>
             </div>
             <div id="logindisplay">
                 @Html.Partial("_LogOnPartial")
             </div>
             <nav>
                 <ul id="menu">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink(@Resources.Global.HomeIndex, "Index", "Home")</li>
                 </ul>
             </nav>
         </header>
